--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 			border-right: 1px solid #777;
 			padding-right: 7px;
 			display: inline;
+			white-space:pre;
 		}
 	</style>
 </head>
@@ -34,7 +35,7 @@
 		{
 			el.innerHTML = el.innerHTML+words[word_counter][character_counter++];
 
-			if(character_counter == words[word_counter].length)
+			if(character_counter == (words[word_counter].length + 1))
 			{
 				word_counter++; 	//choose a different word
 				character_counter = 0;	//start over with the first character of the word
